--- a/index.html
+++ b/index.html
@@ -35,50 +35,64 @@
     </div>
     <!--------------------------------------------------------------------------------->
     <div class="middle-container">
-            <div class="flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <img class="profile-img" src="images/my-site-images/jawaher.png" alt="Jawaher photo">
-                    </div>
-                    <div class="flip-card-back">
-                        <h1>Jawaher</h1>
-                    </div>
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <img class="profile-img" src="images/my-site-images/jawaher.png" alt="Jawaher photo">
+                </div>
+                <div class="flip-card-back">
+                    <h1>Jawaher</h1>
                 </div>
             </div>
-            <div class="div2">
-                <h2>Hello.</h2>
-                <p class="intro">
-                    I am a passionate software engineer skilled in front-end, back-end, and Python programming languages.
-                    The passion for solving a problem and fulfilling a need are great motivators for developing web apps of
-                    high quality and high end-user consideration. Interested in leading innovative projects serving users’
-                    needs.
-                    <!-- I am a fresh IS graduate from UOB. I have good background in several IT fields and I love
+        </div>
+        <div class="div2">
+            <h2>Hello.</h2>
+            <p class="intro">
+                I am a passionate software engineer skilled in front-end, back-end, and Python programming languages.
+                The passion for solving a problem and fulfilling a need are great motivators for developing web apps of
+                high quality and high end-user consideration. Interested in leading innovative projects serving users’
+                needs.
+                <!-- I am a fresh IS graduate from UOB. I have good background in several IT fields and I love
                     website development and design more specifically. -->
-                </p>
-            </div>
+            </p>
+            <a class="btn" href="/HTML/projects.html">View my Projects</a>
+
+        </div>
     </div>
     <hr>
     <div class="middle-container">
 
+        <h2>My Highlighted Skills.</h2>
         <div class="skills">
-            <h2>My Skills.</h2>
             <div class="skill-row">
-                <img class="html-img" src="images/my-site-images/html.gif" alt="">
-                <h3>Web Development</h3>
+                <img class="html-img" src="images/my-site-images/programming.png" alt="">
+                <h3>Programming Languages</h3>
                 <p class="skill-text">
-                    HTML | CSS | JAVASCRIPT | JQUERY | NODE.JS | REACT.JS | PYTHON | MONGODB | POSTGRES | DJANGO |
-                    BOOTSTRAP | WORDPRESS | WIX
-                    <!-- I have taken around 3 courses in web development using several languages including
-                    HTML, CSS, JS, PHP, and C#.
-                    I have also developed several websites using WordPress including my senior project's <a
-                        href="https://www.herfati-bh.com">website</a>.  -->
+                    JavaScript, jQuery, CSS, Bootstrap, HTML, React.js, Node.js, Python
+                </p>
+                <!-- HTML | CSS | JAVASCRIPT | JQUERY | NODE.JS | REACT.JS | PYTHON | MONGODB | POSTGRES | DJANGO | BOOTSTRAP | WORDPRESS | WIX -->
+            </div>
+            <div class="skill-row">
+                <img class="html-img" src="images/my-site-images/db.png" alt="">
+                <h3>Databases</h3>
+                <p class="skill-text">
+                    MongoDB, PostgreSQL
                 </p>
             </div>
-            <!-- <div class="skill-row">
-                <img class="hacker-img" src="images/my-site-images/hacker.gif" alt="">
-                <h3>Cyber Security</h3>
-                <p class="skill-text">I took one course on Information Security and another in Cyber security.</p>
-            </div> -->
+            <div class="skill-row">
+                <img class="html-img" src="images/my-site-images/framework.png" alt="">
+                <h3>Frameworks and Libraries</h3>
+                <p class="skill-text">
+                    Express, Mongoose, Django
+                </p>
+            </div>
+            <div class="skill-row">
+                <img class="html-img" src="images/my-site-images/settings.png" alt="">
+                <h3>Tools</h3>
+                <p class="skill-text">
+                    Postman, pgAdmin, Canva, Figma, MS365 apps e.g., Excel, Word, Powerpoint
+                </p>
+            </div>
         </div>
         <hr>
         <div class="interests">
@@ -120,11 +134,6 @@
                     </p>
                 </div>
             </div>
-            <!-- <div class="skill-row">
-                <img class="hacker-img" src="images/my-site-images/hacker.gif" alt="">
-                <h3>Cyber Security</h3>
-                <p class="skill-text">I took one course on Information Security and another in Cyber security.</p>
-            </div> -->
         </div>
         <hr>
         <div class="contact-me">
