--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -24,7 +24,7 @@
             <a class="footer-link" href="https://www.linkedin.com/in/jawahermohamed/">LinkedIn</a>
         </nav>
     </div>
-    <div class="top-container contact-div">
+    <div class="contact-div">
         <h1>Contact Me</h1>
         <p>Please feel free to contact me for any inquiry or job offer!</p>
         <img class="contact-img" src="../images/my-site-images/phone-call.png" alt="">
@@ -34,8 +34,8 @@
     </div>
     <!--------------------------------------------------------------------------------->
     <div class="bottom-container">
-        <a class="footer-link" href="HTML/contact.html">Contact</a>
-        <a class="footer-link" href="HTML/projects.html">Projects</a>
+        <a class="footer-link" href="contact.html">Contact</a>
+        <a class="footer-link" href="projects.html">Projects</a>
         <a class="footer-link" href="https://www.linkedin.com/in/jawahermohamed/">LinkedIn</a>
         <p class="copyright">© Jawaher Mohamed.</p>
     </div>
