--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -1,29 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link rel="stylesheet" href="../CSS/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
+
+    <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="icon" href="images/logo/android-chrome-512x512.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&family=Source+Sans+Pro:wght@200;400&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <div>
         <nav class="header-links">
             <a href="../index.html">Home</a>
-            <a class="footer-link" href="HTML/contact.html">Contact</a>
-            <a class="footer-link" href="HTML/projects.html">Experience</a>
-            <a class="footer-link" href="HTML/projects.html">Projects</a>
+            <a class="footer-link" href="contact.html">Contact</a>
+            <a class="footer-link" href="experience.html">Experience</a>
+            <a class="footer-link" href="projects.html">Projects</a>
             <a class="footer-link" href="https://www.linkedin.com/in/jawahermohamed/">LinkedIn</a>
         </nav>
     </div>
     <!--------------------------------------------------------------------------------->
+    <div class="middle-container contact-div">
+        <h1>My Projects</h1>
+        <p>Here you can find four of the projects I worked on in General Assembly Software Engineering Immersive course
+            I took from May 2023 until Jul 2023! </p>
+        <div class="project-div">
+            <h2>1. Mario</h2>
+            <p> A side scroll game of the well-known game Mario where the character can move
+                forward, backwards, and jump. The game has winning and losing conditions
+            </p>
+            <img class="project-img" src="/images/my-site-images/Screenshot 2023-08-06 160513.png" alt="">
+            <img class="project-img" src="/images/my-site-images/Screenshot 2023-08-06 160530.png" alt="">
+            <img class="project-img" src="/images/my-site-images/Screenshot 2023-08-06 160546.png" alt="">
+            <img class="project-img" src="/images/my-site-images/Screenshot 2023-08-06 160452.png" alt="">
+            <h3>Tools used:</h3>
+            <li>HTML, CSS, Javascript </li>
+            <video controls="controls">
+                <source src="/images/my-site-images/Mario - Made with Clipchamp.mp4" type="video/mp4" />
+            </video>
+            <p><a href="https://jwahr.github.io/mario-game/">Play the game yourself!</a></p>
+        </div>
+        <div class="project-div">
+            <h2>2. Herfati</h2>
+            <p> An online platform for artists and crafters to showcase and sell artworks to their desired
+                customers</p>
+            <img class="project-img" src="/images/my-site-images/Screenshot 2023-08-06 194217.png" alt="">
+            <img class="project-img" src="/images/my-site-images/Screenshot 2023-08-06 194336.png" alt="">
+            <img class="project-img" src="/images/my-site-images/Screenshot 2023-08-06 194805.png" alt="">
+            <img class="project-img" src="/images/my-site-images/Screenshot 2023-08-06 200800.png" alt="">
+
+            <h3>Tools used:</h3>
+            <li>HTML, CSS, Javascript, MongoDB, Node.js, Express, and Mongoose</li>
+            <video controls="controls">
+                <source src="/images/my-site-images/Herfati .mp4" type="video/mp4" />
+            </video>
+        </div>
+        <div class="project-div">
+            <h2>3. Quizaat</h2>
+            <p>A web app for users to share and test their knowledge. A user can create a quiz, solve
+                a quiz, and get a score for it.
+            </p>
+            <img class="project-img" src="/images/my-site-images/Screenshot 2023-08-06 201950.png" alt="">
+            <img class="project-img" src="/images/my-site-images/Screenshot 2023-08-06 202727.png" alt="">
+            <img class="project-img" src="/images/my-site-images/Screenshot 2023-08-06 202943.png" alt="">
+            <img class="project-img" src="/images/my-site-images/Screenshot 2023-08-06 203025.png" alt="">
+            
+            <h3>Tools used:</h3>
+            <li> React.js, Express, CSS, Postman, MongoDB and Mongoose framework</li>
+            <video controls="controls">
+                <source src="/images/my-site-images/Quizaat.mp4" type="video/mp4" />
+            </video>
+        </div>
+        <div class="project-div">
+            <h2>4. Ekono</h2>
+            <p> An expense management app that allows users to keep track of their expenses and
+                where they spend the most.
+            </p>
+            <img class="project-img" src="/images/my-site-images/Screenshot 2023-08-07 010620.png" alt="">
+            <img class="project-img" src="/images/my-site-images/Screenshot 2023-08-07 104933.png" alt="">
+            <img class="project-img" src="/images/my-site-images/Screenshot 2023-08-07 104956.png" alt="">
+            <img class="project-img" src="/images/my-site-images/Screenshot 2023-08-07 104915.png" alt="">
+            <h3>Tools used:</h3>
+            <li> React.js, Python, Django, Postgresql, Postman, pgAdmin</li>
+            <video controls="controls">
+                <source src="/images/my-site-images/Ekono.mp4" type="video/mp4" />
+            </video>
+        </div>
+
+    </div>
+    <!--------------------------------------------------------------------------------->
+
     <div class="bottom-container">
-        <a class="footer-link" href="HTML/contact.html">Contact</a>
-        <a class="footer-link" href="HTML/projects.html">Projects</a>
+        <a class="footer-link" href="contact.html">Contact</a>
+        <a class="footer-link" href="projects.html">Projects</a>
         <a class="footer-link" href="https://www.linkedin.com/in/jawahermohamed/">LinkedIn</a>
         <p class="copyright">© Jawaher Mohamed.</p>
     </div>
     <!--------------------------------------------------------------------------------->
-
 </body>
+
 </html>
