--- a/HTML/experience.html
+++ b/HTML/experience.html
@@ -105,8 +105,8 @@
     </div>
     <!--------------------------------------------------------------------------------->
     <div class="bottom-container">
-        <a class="footer-link" href="HTML/contact.html">Contact</a>
-        <a class="footer-link" href="HTML/projects.html">Projects</a>
+        <a class="footer-link" href="contact.html">Contact</a>
+        <a class="footer-link" href="projects.html">Projects</a>
         <a class="footer-link" href="https://www.linkedin.com/in/jawahermohamed/">LinkedIn</a>
         <p class="copyright">© Jawaher Mohamed.</p>
     </div>
